--- a/docs/report-assignment-6.tex
+++ b/docs/report-assignment-6.tex
@@ -60,7 +60,7 @@ In the chosen implementation, goroutines are employed in various ways. In \textt
 \subsection{Channels}
 Channels are fundamental to asynchronous routines Go. Fundamentally these are FIFO blocking queues allowing routines to send and receive data. 
 
-In the chosen implementation, channels are used in various locations to provide means of communication. In the \texttt{api.go} of the Raft library, Raft nodes utilize several channels, for a variety of purposes, including:
+\bigbreak \noindent In the chosen implementation, channels are used in various locations to provide means of communication. In the \texttt{api.go} of the Raft library, Raft nodes utilize several channels, for a variety of purposes, including:
 \begin{itemize}
     \item \textbf{applyCh}, which sends logs to the main goroutine for commitment and updates to the FSM(finite state machine).
     \item \textbf{leaderCh}, which is used to communicate leadership changes between nodes.
